force-app/main/default/objects/Inventario__c/Inventario__c.object-meta.xml
<CustomObject>
    <description>Inventario donde estaran el material y el stock</description>
    <label>Inventario</label>
    <nameField>
        <label>Inventario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>