force-app/main/default/objects/Inventario__c/fields/Cantidad_Apartada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Apartada__c</fullName>
    <description>para pedidos que aun no se pagan</description>
    <label>Cantidad_Apartada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>