force-app/main/default/objects/Inventario__c/fields/Cantidad_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Disponible__c</fullName>
    <label>Cantidad_Disponible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>