force-app/main/default/objects/Inventario__c/fields/Variante_Producto__c.field-meta.xml
<CustomField>
    <fullName>Variante_Producto__c</fullName>
    <description>relacion entre variante del  producto y el inventario</description>
    <label>Variante_Producto</label>
    <referenceTo>Variante_Producto__c</referenceTo>
    <relationshipLabel>Inventarios</relationshipLabel>
    <relationshipName>Inventarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>